--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Jimmy Sawczuk</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Bangers" rel="stylesheet" />
 	<link href="/build/main.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
