--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 					<div class="links">
 						<a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fa fa-envelope-open-o"></i> E-mail</a>
-						<a href="https://section411.com" class="link section411" target="_blank"><img src="/img/section411-logo.svg" /> Section 411</a>
+						<a href="https://section411.com" class="link section411" target="_blank"><div class="logo-img"><img src="/img/section411-logo.svg" /></div> Section 411</a>
 						<a href="https://jimmysawczuk.com/resume" class="link resume" target="_blank"><i class="fa fa-briefcase"></i> Resum&eacute;</a>
 					</div>
 				</div>
