--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	<title>Jimmy Sawczuk</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Bangers" rel="stylesheet" />
 	<link href="/build/main.css" type="text/css" rel="stylesheet" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
 	<div id="main-container">
