--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
 		</div>
 	</div>
 
-	<script src="/build/bundle.js" type="text/javascript"></script>
+	<script src="/build/bundle.js" type="text/javascript" async></script>
 </body>
 </style>
