--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Jimmy Sawczuk</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Bangers" rel="stylesheet" />
-	<link href="/build/main.css" type="text/css" rel="stylesheet" />
+	<!-- <link href="/build/main.css" type="text/css" rel="stylesheet" /> -->
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 	<link rel="manifest" href="/manifest.json">
 	<meta name="theme-color" content="#ffffff">
+	<script src="/build/bundle.js" type="text/javascript" async></script>
 </head>
 <body>
 	<div id="main-container">
@@ -50,7 +51,5 @@
 			</div>
 		</div>
 	</div>
-
-	<script src="/build/bundle.js" type="text/javascript" async></script>
 </body>
 </style>
