New bg, style tweaks.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Jimmy Sawczuk</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Bangers" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Bungee" rel="stylesheet" />
 	<link href="/build/main.css" type="text/css" rel="stylesheet" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
@@ -22,14 +22,7 @@
 				</div>
 				<div class="details">
 					<h1 class="name">Jimmy Sawczuk</h1>
-					<h2 class="title">Software Engineer</h2>
-					<p>
-						Hey! My name is Jimmy.
-					</p>
-
-					<p>
-						I'm a native Clevelander from Perry, Ohio. After graduating from Case Western Reserve University with a degree in Computer Science in 2009, I moved to Columbia, South Carolina and started work at LoudDoor, and I've been there ever since. I like to work on side projects, and I'm on a mission to see every Major League Baseball stadium on the planet. I'm a diehard Indians, Steelers and Buckeyes fan, and I play tennis, ping pong, racquetball and disc golf. I also love skiing and running.
-					</p>
+					<h2 class="title">Software Engineer &middot; Columbia, SC</h2>
 
 					<div class="links">
 						<a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fa fa-envelope-open-o"></i> E-mail</a>
