--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 	<link rel="manifest" href="/manifest.json">
 	<meta name="theme-color" content="#ffffff">
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-3634519-20', 'auto');
+	  ga('send', 'pageview');
+	</script>
 </head>
 <body>
 	<div id="main-container">
@@ -46,4 +55,4 @@
 
 	<script src="/build/bundle.js" type="text/javascript" async></script>
 </body>
-</style>
+</html>
