Adding meta description

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	  ga('create', 'UA-3634519-20', 'auto');
 	  ga('send', 'pageview');
 	</script>
+	<meta name="description" content="Jimmy Sawczuk is a software engineer who currently lives and works in Columbia, SC." />
 </head>
 <body>
 	<div id="main-container">
