--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Jimmy Sawczuk</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Bungee" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet" />
 	<link href="/build/main.css" type="text/css" rel="stylesheet" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
