Style tweaks on name/title.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</div>
 				<div class="details">
 					<h1 class="name">Jimmy Sawczuk</h1>
-					<h2 class="title"><span>Software Engineer</span> &middot; <span>Columbia, SC</span></h2>
+					<h2 class="title"><span>Software Engineer</span><span>Columbia, SC</span></h2>
 
 					<div class="links">
 						<a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fa fa-envelope-open-o"></i> E-mail</a>
