New headshot images with circles, adaptive image formats.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 		<div class="card">
 			<div class="top">
 				<div class="img">
-					<img src="/img/headshot.jpg" alt="Jimmy Sawczuk" />
+					<picture>
+						<source srcset="/img/headshot.webp" type="image/webp" />
+						<source srcset="/img/headshot.jpg" type="image/jpeg" />
+						<img src="/img/headshot.jpg" alt="Jimmy Sawczuk" />
+					</picture>
 				</div>
 				<div class="details">
 					<h1 class="name">Jimmy Sawczuk</h1>
