--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  ga('create', 'UA-3634519-20', 'auto');
 	  ga('send', 'pageview');
 	</script>
-	<meta name="description" content="Jimmy Sawczuk is a software engineer who currently lives and works in Columbia, SC." />
+	<meta name="description" content="Jimmy Sawczuk is a software engineer who currently lives and works in Charlotte, NC." />
 </head>
 <body>
 	<div id="main-container">
@@ -36,7 +36,7 @@
 				</div>
 				<div class="details">
 					<h1 class="name">Jimmy Sawczuk</h1>
-					<h2 class="title"><span>Software Engineer</span><span>Columbia, SC</span></h2>
+					<h2 class="title"><span>Software Engineer</span><span>Charlotte, NC</span></h2>
 
 					<div class="links">
 						<a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fa fa-envelope-open-o"></i> E-mail</a>
