--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<div class="links">
 						<a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fa fa-envelope-open-o"></i> E-mail</a>
 						<a href="https://section411.com" class="link section411" target="_blank"><div class="logo-img"><img src="/img/section411-logo.png" /></div> Section 411</a>
-						<a href="https://jimmysawczuk.com/resume" class="link resume" target="_blank"><i class="fa fa-id-card-o"></i> Résumé</a>
+						<a href="/resume" class="link resume" target="_blank"><i class="fa fa-id-card-o"></i> Résumé</a>
 					</div>
 				</div>
 			</div>
@@ -58,6 +58,6 @@
 		</div>
 	</div>
 
-	<script src="/build/bundle.js" type="text/javascript" async></script>
+	<script src="/build/main.js" type="text/javascript" async></script>
 </body>
 </html>
