--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Jimmy Sawczuk</title>
-	<link href="/build/main.css" type="text/css" rel="stylesheet" />
+	<link href="{{ asset "/build/main.css" }}" type="text/css" rel="stylesheet" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
@@ -58,6 +58,6 @@
 		</div>
 	</div>
 
-	<script src="/build/main.js" type="text/javascript" async></script>
+	<script src="{{ asset "/build/main.js" }}" async></script>
 </body>
 </html>
