--- a/tmpl/resume.html
+++ b/tmpl/resume.html
@@ -7,7 +7,7 @@
 	<title>James J. Sawczuk - Software Engineer</title>
 
 	<link href="{{ asset "/build/resume.css" }}" rel="stylesheet" type="text/css" />
-	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
 
 	<meta name="keywords" content="jimmy, sawczuk, james, resume, php, html, css, mysql, mongodb, developer, software, engineer, go, programmer" />
 	<meta name="description" content="The professional resume of James J. (Jimmy) Sawczuk, a software engineer who currently lives and works in Charlotte, NC." />
