--- a/tmpl/resume.html
+++ b/tmpl/resume.html
@@ -100,6 +100,7 @@
 						<li>Used a number of other technologies such as memcache, Redis, and node.js in production</li>
 						<li>Spearheaded the development of a business pivot to Facebook Page audience analytics</li>
 						<li>Prototyped most of the analytics algorithms and systems used in the company</li>
+						<li>Listed as a co-inventor of utility patent #9,842,349, "System and method for preference determination."</li>
 						<li>Consulted on a statistical study of Facebook fan engagement vs. age for Coca-Cola to present at a conference</li>
 						<li>Designed and implemented a rich persona definition API in both Go and PHP which is still used for most of the company's analytics work</li>
 						<li>Designed and implemented a worker daemon in Go that schedules and runs thousands of analytic tasks per day</li>
